<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circulo3"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableBottom="@drawable/botony"
            android:padding="3dp"
            android:text="@string/ranking"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:drawableRight="@drawable/botonb"
                android:padding="3dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/botonc"
                android:padding="3dp"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/llBotones"
            android:background="#00000000"
            android:drawableTop="@drawable/botonx"
            android:padding="3dp"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>