<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlRanking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonaranja" >
    
    <ImageView
        android:id="@+id/ivTitutlo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/medalla"
        android:contentDescription="@string/app_name" >
      
        </ImageView>

    <LinearLayout
        android:id="@+id/llRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivTitutlo"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:gravity="fill_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/position"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/listRanking"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llRanking"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:divider="#00000000"
        android:dividerHeight="5dp"
        android:listSelector="@drawable/list_selector" >

    </ListView>

</RelativeLayout>